plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'application'
}

group = 'com.clothes'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.2.0'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testImplementation 'org.springframework.security:spring-security-test'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa:3.0.2'
	implementation 'mysql:mysql-connector-java:8.0.23' // MySQL 드라이버 추가

	implementation ('org.springframework.boot:spring-boot-starter-data-jpa') {
		exclude group: 'org.hibernate'
	}

	// JWT Token
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	// Swagger 사용
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0")

	// Google Drive API
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
	implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
	implementation 'com.google.api-client:google-api-client:2.0.0'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.11.0'
	implementation 'com.google.code.gson:gson:2.9.1'
}

tasks.named('test') {
	useJUnitPlatform()
}

application {
	mainClassName = 'com.clothes.perst.PerstApplication' // 메인 클래스 지정
}
